--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
@@ -20,12 +20,12 @@
     <div class="content">
         Select Action
         &nbsp;&nbsp;
-        <input type="radio" id="new" name="payment-method" value="new" class="custom-control-input" checked>
+        <input type="radio" id="new" name="payment-method" value="new" checked>
         <label for="new" class="no-bold">
             Add New Payment
         </label>
         &nbsp;&nbsp;&nbsp;
-        <input type="radio" id="pending" name="payment-method" value="pending" class="custom-control-input">
+        <input type="radio" id="pending" name="payment-method" value="pending">
         <label for="pending" class="no-bold">
             Apply Pending Credits
         </label>
@@ -95,14 +95,13 @@
                     </div>
                     <!--Amount Details-->
                     <div class="col">
-                        <!--
                             <form>
                             <div class="row">
                                 <div class="form-group">
-                                    <label for="payment_amt" class="col-sm-1">
+                                    <label for="payment_amt" class="col-sm-2">
                                         Payment Amount*
                                     </label>
-                                    <input type="number" class="col-sm-2" id="payment_amt" placeholder="10.00">
+                                    <input type="number" class="col-sm-1" id="payment_amt" placeholder="10.00">
                                 </div>
                             
                                 <div class="form-group">
@@ -119,7 +118,6 @@
                         Reference No*
                         Provider
                         Notes
-                            -->
                     </div>
                 </div>
             </div>
