begin Payment Details Form

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
@@ -95,8 +95,7 @@
                     </div>
                     <!--Amount Details-->
                     <div class="col">
-                        <!--
-                            <form>
+                        <form>
                             <div class="row">
                                 <div class="form-group">
                                     <label for="payment_amt" class="col-sm-1">
@@ -119,7 +118,6 @@
                         Reference No*
                         Provider
                         Notes
-                            -->
                     </div>
                 </div>
             </div>
