--- a/index.html
+++ b/index.html
@@ -94,22 +94,19 @@
                         <!--</div>-->
                     </div>
                     <!--Amount Details-->
-                    <div class="col">
+                    <div class="col-md-6">
                         <form>
                             <div class="row">
-                                <div class="form-group">
-                                    <label for="payment_amt" class="col-sm-1">
-                                        Payment Amount*
-                                    </label>
-                                    <input type="number" class="col-sm-2" id="payment_amt" placeholder="10.00">
-                                </div>
-                            
-                                <div class="form-group">
-                                    <label for="payment_date" class="col-sm-1">
-                                        Payment Date*
-                                    </label>
-                                    <input type="date" class="col-sm-1" id="date" placeholder="MM-DD-YYYY">
-                                </div>
+                                <br /> <br />
+                                <label for="payment_amt" class="no-bold col-sm-3">
+                                    Payment Amount*
+                                </label>
+                                <input type="number" class="col-sm-3" id="payment_amt" placeholder="10.00">
+
+                                <label for="payment_date" class="no-bold col-sm-3">
+                                    Payment Date*
+                                </label>
+                                <input type="date" class="col-sm-3" id="date" placeholder="MM-DD-YYYY">
                             </div>
                         </form>
                         Location*
