--- a/index.html
+++ b/index.html
@@ -95,26 +95,79 @@
                     </div>
                     <!--Amount Details-->
                     <div class="col-md-6">
+                        <br />
                         <form>
                             <div class="row">
-                                <br /> <br />
-                                <label for="payment_amt" class="no-bold col-sm-3">
-                                    Payment Amount*
-                                </label>
-                                <input type="number" class="col-sm-3" id="payment_amt" placeholder="10.00">
-
-                                <label for="payment_date" class="no-bold col-sm-3">
-                                    Payment Date*
-                                </label>
-                                <input type="date" class="col-sm-3" id="date" placeholder="MM-DD-YYYY">
+                                <div class="col-sm-3">
+                                    <label class="no-bold">Payment Amount*</label>
+                                </div>
+                                <div class="col-sm-3">
+                                    <input type="number" class="form-control" placeholder="10.00">
+                                </div>
+                                <div class="col-sm-3">
+                                    <label class="no-bold">Payment Date*</label>
+                                </div>
+                                <div class="col-sm-3">
+                                    <input type="date" class="form-control" placeholder="Last name">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <label class="no-bold">Location*</label>
+                                </div>
+                                <div class="col-sm-5">
+                                    <select class="form-control" id="exampleFormControlSelect1">
+                                        <option>Sand Lake Avenue</option>
+                                        <option>City of Light</option>
+                                        <option>Readers Junction</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <label class="no-bold">Payment Type*</label>
+                                </div>
+                                <div class="col-sm-5">
+                                    <select class="form-control" id="exampleFormControlSelect1">
+                                        <option>Credit/Debit Card - VISA</option>
+                                        <option>Net Banking</option>
+                                        <option>UPI Payment</option>
+                                    </select>
+                                </div>
+                                <div class="col-sm-2">
+                                    <label class="no-bold">Payment Type*</label>
+                                </div>
+                                <div class="col-sm-2">
+                                    <input type="text" class="form-control" placeholder="21321313">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <label class="no-bold">Provider</label>
+                                </div>
+                                <div class="col-sm-5">
+                                    <select class="form-control" id="exampleFormControlSelect1">
+                                        <option>JayKV</option>
+                                        <option>Doe Jean</option>
+                                        <option>Ezra Boeson</option>
+                                        <option>Jaiden Kolodziej</option>
+                                        <option>Phoebe Marrs</option>
+                                        <option>Iqbal Ahammed</option>
+                                        <option>Innocent</option>
+                                        <option>Fathima Knight</option>
+                                        <option>Cecil Ramjan</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <label class="no-bold">Notes</label>
+                                </div>
+                                <div class="col-sm-9">
+                                    <textarea class="form-control" rows="3" placeholder="Enter Remarks Here" required></textarea>
+                                </div>
                             </div>
                         </form>
-                        Location*
-
-                        Payment Type*
-                        Reference No*
-                        Provider
-                        Notes
                     </div>
                 </div>
             </div>
